--- a/back/.env
+++ b/back/.env
@@ -1,2 +1,6 @@
+// back/.env
+// Puerto para el servidor
+// URI de conexión a MongoDB Atlas
+
 PORT = 9000
 MONGO_URI = mongodb+srv://lidiaaire:Puertosol10@cluster0.d3tputi.mongodb.net/?appName=Cluster0
